22 October 2018: Wouter
	- Fix #4192: unbound-control-setup generates keys not readable by
	  group.
	- check that the dnstap socket file can be opened and exists, print
	  error if not.
	- Fix #4154: make ECS_MAX_TREESIZE configurable, with
	  the max-ecs-tree-size-ipv4 and max-ecs-tree-size-ipv6 options.

22 October 2018: Ralph
	- Change fast-server-num default to 3.

8 October 2018: Ralph
	- Add fast-server-permil and fast-server-num options.
	- Deprecate low-rtt and low-rtt-permil options.

8 October 2018: Wouter
	- Squelch log of failed to tcp initiate after TCP Fastopen failure.

5 October 2018: Wouter
	- Squelch EADDRNOTAVAIL errors when the interface goes away,
	  this omits 'can't assign requested address' errors unless
	  verbosity is set to a high value.
	- Set default for so-reuseport to no for FreeBSD.  It is enabled
	  by default for Linux and DragonFlyBSD.  The setting can 
	  be configured in unbound.conf to override the default.
	- iana port update.

2 October 2018: Wouter
	- updated contrib/fastrpz.patch to apply for this version
	- dnscrypt.c removed sizeof to get array bounds.
	- Fix testlock code to set noreturn on error routine.
	- Remove unused variable from contrib fastrpz/rpz.c and
	  remove unused diagnostic pragmas that themselves generate warnings
	- clang analyze test is used only when assertions are enabled.

1 October 2018: Wouter
	- tag for release 1.8.1rc1.  Became release 1.8.1 on 8 oct, with
	  fastrpz.patch fix included.  Trunk has 1.8.2 in development.

27 September 2018: Wouter
	- Fix #4188: IPv6 forwarders without ipv6 result in SERVFAIL, fixes
	  qname minimisation with a forwarder when connectivity has issues
	  from rejecting responses.

25 September 2018: Wouter
	- Perform TLS SNI indication of the host that is being contacted
	  for DNS over TLS service.  It sets the configured tls auth name.
	  This is useful for hosts that apart from the DNS over TLS services
	  also provide other (web) services.