@@ -1,3 +1,8 @@
+24 October 2018: Ralph
+	- Add markdel function to ECS slabhash.
+	- Limit ECS scope returned to client to the scope used for caching.
+	- Make lint like previous #4154 fix.
+
 22 October 2018: Wouter
 	- Fix #4192: unbound-control-setup generates keys not readable by
 	  group.
